minor tweaks: - fix some QueryView/PopupMenu Ext menu escaping of dataregion names - generate mostly unique ext ids for menus and items in QueryView - [edit] and [details] column header no longer highlights on mouse hover - now that we're in strict mode, we can finally remove the script that forces the mouse hover style on IE

--- a/core/webapp/printStyle.css
+++ b/core/webapp/printStyle.css
@@ -9,6 +9,7 @@
 }
 
 .labkey-data-region .labkey-details,
+.labkey-data-region .labkey-update,
 .labkey-data-region .labkey-selectors
 {
     visibility: collapse;
